// Code generated by sqlc. DO NOT EDIT.
// versions:
//   sqlc v1.31.1

package pg

import (
	"database/sql/driver"
	"fmt"

	"github.com/google/uuid"
	"github.com/jackc/pgx/v5/pgtype"
	pgvector_go "github.com/pgvector/pgvector-go"
)

type CandidateIngestionMethod string

const (
	CandidateIngestionMethodDIRECTORY    CandidateIngestionMethod = "DIRECTORY"
	CandidateIngestionMethodSEARCH       CandidateIngestionMethod = "SEARCH"
	CandidateIngestionMethodSUBSCRIPTION CandidateIngestionMethod = "SUBSCRIPTION"
	CandidateIngestionMethodMANUAL       CandidateIngestionMethod = "MANUAL"
)

func (e *CandidateIngestionMethod) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = CandidateIngestionMethod(s)
	case string:
		*e = CandidateIngestionMethod(s)
	default:
		return fmt.Errorf("unsupported scan type for CandidateIngestionMethod: %T", src)
	}
	return nil
}

type NullCandidateIngestionMethod struct {
	CandidateIngestionMethod CandidateIngestionMethod `json:"candidate_ingestion_method"`
	Valid                    bool                     `json:"valid"` // Valid is true if CandidateIngestionMethod is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullCandidateIngestionMethod) Scan(value interface{}) error {
	if value == nil {
		ns.CandidateIngestionMethod, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.CandidateIngestionMethod.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullCandidateIngestionMethod) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.CandidateIngestionMethod), nil
}

func (e CandidateIngestionMethod) Valid() bool {
	switch e {
	case CandidateIngestionMethodDIRECTORY,
		CandidateIngestionMethodSEARCH,
		CandidateIngestionMethodSUBSCRIPTION,
		CandidateIngestionMethodMANUAL:
		return true
	}
	return false
}

func AllCandidateIngestionMethodValues() []CandidateIngestionMethod {
	return []CandidateIngestionMethod{
		CandidateIngestionMethodDIRECTORY,
		CandidateIngestionMethodSEARCH,
		CandidateIngestionMethodSUBSCRIPTION,
		CandidateIngestionMethodMANUAL,
	}
}

type ContentType string

const (
	ContentTypePARTYRELEASE ContentType = "PARTY_RELEASE"
	ContentTypeARTICLE      ContentType = "ARTICLE"
	ContentTypeSOCIAL       ContentType = "SOCIAL"
)

func (e *ContentType) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = ContentType(s)
	case string:
		*e = ContentType(s)
	default:
		return fmt.Errorf("unsupported scan type for ContentType: %T", src)
	}
	return nil
}

type NullContentType struct {
	ContentType ContentType `json:"content_type"`
	Valid       bool        `json:"valid"` // Valid is true if ContentType is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullContentType) Scan(value interface{}) error {
	if value == nil {
		ns.ContentType, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.ContentType.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullContentType) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.ContentType), nil
}

func (e ContentType) Valid() bool {
	switch e {
	case ContentTypePARTYRELEASE,
		ContentTypeARTICLE,
		ContentTypeSOCIAL:
		return true
	}
	return false
}

func AllContentTypeValues() []ContentType {
	return []ContentType{
		ContentTypePARTYRELEASE,
		ContentTypeARTICLE,
		ContentTypeSOCIAL,
	}
}

type EmbeddingCategory string

const (
	EmbeddingCategoryTITLE EmbeddingCategory = "TITLE"
	EmbeddingCategoryBRIEF EmbeddingCategory = "BRIEF"
)

func (e *EmbeddingCategory) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = EmbeddingCategory(s)
	case string:
		*e = EmbeddingCategory(s)
	default:
		return fmt.Errorf("unsupported scan type for EmbeddingCategory: %T", src)
	}
	return nil
}

type NullEmbeddingCategory struct {
	EmbeddingCategory EmbeddingCategory `json:"embedding_category"`
	Valid             bool              `json:"valid"` // Valid is true if EmbeddingCategory is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullEmbeddingCategory) Scan(value interface{}) error {
	if value == nil {
		ns.EmbeddingCategory, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.EmbeddingCategory.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullEmbeddingCategory) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.EmbeddingCategory), nil
}

func (e EmbeddingCategory) Valid() bool {
	switch e {
	case EmbeddingCategoryTITLE,
		EmbeddingCategoryBRIEF:
		return true
	}
	return false
}

func AllEmbeddingCategoryValues() []EmbeddingCategory {
	return []EmbeddingCategory{
		EmbeddingCategoryTITLE,
		EmbeddingCategoryBRIEF,
	}
}

type EntityType string

const (
	EntityTypePerson            EntityType = "person"
	EntityTypeParty             EntityType = "party"
	EntityTypeGovernmentAgency  EntityType = "government_agency"
	EntityTypeLegislativeBody   EntityType = "legislative_body"
	EntityTypeJudicialBody      EntityType = "judicial_body"
	EntityTypeMilitary          EntityType = "military"
	EntityTypeForeignGovernment EntityType = "foreign_government"
	EntityTypeOrganization      EntityType = "organization"
	EntityTypeMedia             EntityType = "media"
	EntityTypeCivicGroup        EntityType = "civic_group"
	EntityTypeLocation          EntityType = "location"
	EntityTypeOther             EntityType = "other"
)

func (e *EntityType) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = EntityType(s)
	case string:
		*e = EntityType(s)
	default:
		return fmt.Errorf("unsupported scan type for EntityType: %T", src)
	}
	return nil
}

type NullEntityType struct {
	EntityType EntityType `json:"entity_type"`
	Valid      bool       `json:"valid"` // Valid is true if EntityType is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullEntityType) Scan(value interface{}) error {
	if value == nil {
		ns.EntityType, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.EntityType.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullEntityType) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.EntityType), nil
}

func (e EntityType) Valid() bool {
	switch e {
	case EntityTypePerson,
		EntityTypeParty,
		EntityTypeGovernmentAgency,
		EntityTypeLegislativeBody,
		EntityTypeJudicialBody,
		EntityTypeMilitary,
		EntityTypeForeignGovernment,
		EntityTypeOrganization,
		EntityTypeMedia,
		EntityTypeCivicGroup,
		EntityTypeLocation,
		EntityTypeOther:
		return true
	}
	return false
}

func AllEntityTypeValues() []EntityType {
	return []EntityType{
		EntityTypePerson,
		EntityTypeParty,
		EntityTypeGovernmentAgency,
		EntityTypeLegislativeBody,
		EntityTypeJudicialBody,
		EntityTypeMilitary,
		EntityTypeForeignGovernment,
		EntityTypeOrganization,
		EntityTypeMedia,
		EntityTypeCivicGroup,
		EntityTypeLocation,
		EntityTypeOther,
	}
}

type ModelType string

const (
	ModelTypeEXTRACTOR ModelType = "EXTRACTOR"
	ModelTypeEMBEDDER  ModelType = "EMBEDDER"
	ModelTypeANALYZER  ModelType = "ANALYZER"
)

func (e *ModelType) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = ModelType(s)
	case string:
		*e = ModelType(s)
	default:
		return fmt.Errorf("unsupported scan type for ModelType: %T", src)
	}
	return nil
}

type NullModelType struct {
	ModelType ModelType `json:"model_type"`
	Valid     bool      `json:"valid"` // Valid is true if ModelType is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullModelType) Scan(value interface{}) error {
	if value == nil {
		ns.ModelType, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.ModelType.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullModelType) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.ModelType), nil
}

func (e ModelType) Valid() bool {
	switch e {
	case ModelTypeEXTRACTOR,
		ModelTypeEMBEDDER,
		ModelTypeANALYZER:
		return true
	}
	return false
}

func AllModelTypeValues() []ModelType {
	return []ModelType{
		ModelTypeEXTRACTOR,
		ModelTypeEMBEDDER,
		ModelTypeANALYZER,
	}
}

type SourceType string

const (
	SourceTypePARTY SourceType = "PARTY"
	SourceTypeMEDIA SourceType = "MEDIA"
)

func (e *SourceType) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = SourceType(s)
	case string:
		*e = SourceType(s)
	default:
		return fmt.Errorf("unsupported scan type for SourceType: %T", src)
	}
	return nil
}

type NullSourceType struct {
	SourceType SourceType `json:"source_type"`
	Valid      bool       `json:"valid"` // Valid is true if SourceType is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullSourceType) Scan(value interface{}) error {
	if value == nil {
		ns.SourceType, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.SourceType.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullSourceType) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.SourceType), nil
}

func (e SourceType) Valid() bool {
	switch e {
	case SourceTypePARTY,
		SourceTypeMEDIA:
		return true
	}
	return false
}

func AllSourceTypeValues() []SourceType {
	return []SourceType{
		SourceTypePARTY,
		SourceTypeMEDIA,
	}
}

type TaskKind string

const (
	TaskKindDIRECTORYFETCH TaskKind = "DIRECTORY_FETCH"
	TaskKindKEYWORDSEARCH  TaskKind = "KEYWORD_SEARCH"
	TaskKindPAGEFETCH      TaskKind = "PAGE_FETCH"
	TaskKindEMBEDCANDIDATE TaskKind = "EMBED_CANDIDATE"
	TaskKindEMBEDCONTENT   TaskKind = "EMBED_CONTENT"
)

func (e *TaskKind) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = TaskKind(s)
	case string:
		*e = TaskKind(s)
	default:
		return fmt.Errorf("unsupported scan type for TaskKind: %T", src)
	}
	return nil
}

type NullTaskKind struct {
	TaskKind TaskKind `json:"task_kind"`
	Valid    bool     `json:"valid"` // Valid is true if TaskKind is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullTaskKind) Scan(value interface{}) error {
	if value == nil {
		ns.TaskKind, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.TaskKind.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullTaskKind) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.TaskKind), nil
}

func (e TaskKind) Valid() bool {
	switch e {
	case TaskKindDIRECTORYFETCH,
		TaskKindKEYWORDSEARCH,
		TaskKindPAGEFETCH,
		TaskKindEMBEDCANDIDATE,
		TaskKindEMBEDCONTENT:
		return true
	}
	return false
}

func AllTaskKindValues() []TaskKind {
	return []TaskKind{
		TaskKindDIRECTORYFETCH,
		TaskKindKEYWORDSEARCH,
		TaskKindPAGEFETCH,
		TaskKindEMBEDCANDIDATE,
		TaskKindEMBEDCONTENT,
	}
}

type TaskStatus string

const (
	TaskStatusPENDING   TaskStatus = "PENDING"
	TaskStatusRUNNING   TaskStatus = "RUNNING"
	TaskStatusFAILED    TaskStatus = "FAILED"
	TaskStatusCOMPLETED TaskStatus = "COMPLETED"
)

func (e *TaskStatus) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = TaskStatus(s)
	case string:
		*e = TaskStatus(s)
	default:
		return fmt.Errorf("unsupported scan type for TaskStatus: %T", src)
	}
	return nil
}

type NullTaskStatus struct {
	TaskStatus TaskStatus `json:"task_status"`
	Valid      bool       `json:"valid"` // Valid is true if TaskStatus is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullTaskStatus) Scan(value interface{}) error {
	if value == nil {
		ns.TaskStatus, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.TaskStatus.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullTaskStatus) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.TaskStatus), nil
}

func (e TaskStatus) Valid() bool {
	switch e {
	case TaskStatusPENDING,
		TaskStatusRUNNING,
		TaskStatusFAILED,
		TaskStatusCOMPLETED:
		return true
	}
	return false
}

func AllTaskStatusValues() []TaskStatus {
	return []TaskStatus{
		TaskStatusPENDING,
		TaskStatusRUNNING,
		TaskStatusFAILED,
		TaskStatusCOMPLETED,
	}
}

// Groups one cron/trigger run so planner can detect completion. id used in tasks.batch_id and copied into candidates/contents.
type Batch struct {
	ID                   uuid.UUID          `db:"id" json:"id"`
	SourceType           SourceType         `db:"source_type" json:"source_type"`
	TraceID              pgtype.Text        `db:"trace_id" json:"trace_id"`
	CreatedAt            pgtype.Timestamptz `db:"created_at" json:"created_at"`
	UpdatedAt            pgtype.Timestamptz `db:"updated_at" json:"updated_at"`
	CompletedAt          pgtype.Timestamptz `db:"completed_at" json:"completed_at"`
	PublishedAt          pgtype.Timestamptz `db:"published_at" json:"published_at"`
	LastPublishAttemptAt pgtype.Timestamptz `db:"last_publish_attempt_at" json:"last_publish_attempt_at"`
	PublishRetryCount    int32              `db:"publish_retry_count" json:"publish_retry_count"`
	PublishError         pgtype.Text        `db:"publish_error" json:"publish_error"`
	StalledAt            pgtype.Timestamptz `db:"stalled_at" json:"stalled_at"`
}

// Article briefs (title/url/desc) before full-page fetch. Discovery terminal asset.
type Candidate struct {
	ID         uuid.UUID   `db:"id" json:"id"`
	BatchID    pgtype.UUID `db:"batch_id" json:"batch_id"`
	SourceAbbr string      `db:"source_abbr" json:"source_abbr"`
	TraceID    string      `db:"trace_id" json:"trace_id"`
	// Dedup key (SHA-256[:16] hex of URL+title+published_at). Not a separate table.
	Fingerprint     string                   `db:"fingerprint" json:"fingerprint"`
	Url             string                   `db:"url" json:"url"`
	Title           string                   `db:"title" json:"title"`
	Description     pgtype.Text              `db:"description" json:"description"`
	IngestionMethod CandidateIngestionMethod `db:"ingestion_method" json:"ingestion_method"`
	Metadata        []byte                   `db:"metadata" json:"metadata"`
	PublishedAt     pgtype.Timestamptz       `db:"published_at" json:"published_at"`
	DiscoveredAt    pgtype.Timestamptz       `db:"discovered_at" json:"discovered_at"`
	CreatedAt       pgtype.Timestamptz       `db:"created_at" json:"created_at"`
}

type CandidateEmbeddingsGemma2025 struct {
	ID          int64              `db:"id" json:"id"`
	CandidateID uuid.UUID          `db:"candidate_id" json:"candidate_id"`
	ModelID     int16              `db:"model_id" json:"model_id"`
	Category    EmbeddingCategory  `db:"category" json:"category"`
	Vector      pgvector_go.Vector `db:"vector" json:"vector"`
	InputHash   string             `db:"input_hash" json:"input_hash"`
	TraceID     string             `db:"trace_id" json:"trace_id"`
	CreatedAt   pgtype.Timestamptz `db:"created_at" json:"created_at"`
}

// Full fetched article. 1:1 with candidates via UNIQUE candidate_id.
type Content struct {
	ID          uuid.UUID          `db:"id" json:"id"`
	BatchID     pgtype.UUID        `db:"batch_id" json:"batch_id"`
	Type        ContentType        `db:"type" json:"type"`
	SourceAbbr  string             `db:"source_abbr" json:"source_abbr"`
	CandidateID pgtype.UUID        `db:"candidate_id" json:"candidate_id"`
	Url         string             `db:"url" json:"url"`
	Title       string             `db:"title" json:"title"`
	Content     string             `db:"content" json:"content"`
	Author      pgtype.Text        `db:"author" json:"author"`
	TraceID     string             `db:"trace_id" json:"trace_id"`
	PublishedAt pgtype.Timestamptz `db:"published_at" json:"published_at"`
	FetchedAt   pgtype.Timestamptz `db:"fetched_at" json:"fetched_at"`
	CreatedAt   pgtype.Timestamptz `db:"created_at" json:"created_at"`
	DeletedAt   pgtype.Timestamptz `db:"deleted_at" json:"deleted_at"`
	Metadata    []byte             `db:"metadata" json:"metadata"`
}

type ContentEmbeddingsGemma2025 struct {
	ID        int64              `db:"id" json:"id"`
	ContentID uuid.UUID          `db:"content_id" json:"content_id"`
	ModelID   int16              `db:"model_id" json:"model_id"`
	Vector    pgvector_go.Vector `db:"vector" json:"vector"`
	InputHash string             `db:"input_hash" json:"input_hash"`
	TraceID   string             `db:"trace_id" json:"trace_id"`
	CreatedAt pgtype.Timestamptz `db:"created_at" json:"created_at"`
	DeletedAt pgtype.Timestamptz `db:"deleted_at" json:"deleted_at"`
}

// One structured extraction per (content, model, prompt, schema_version). Append-only snapshot.
type ContentExtraction struct {
	ID            uuid.UUID          `db:"id" json:"id"`
	ContentID     uuid.UUID          `db:"content_id" json:"content_id"`
	ModelID       int16              `db:"model_id" json:"model_id"`
	PromptID      uuid.UUID          `db:"prompt_id" json:"prompt_id"`
	SchemaName    string             `db:"schema_name" json:"schema_name"`
	SchemaVersion int32              `db:"schema_version" json:"schema_version"`
	Title         string             `db:"title" json:"title"`
	Summary       string             `db:"summary" json:"summary"`
	RawResult     []byte             `db:"raw_result" json:"raw_result"`
	TraceID       string             `db:"trace_id" json:"trace_id"`
	CreatedAt     pgtype.Timestamptz `db:"created_at" json:"created_at"`
}

type ContentExtractionEntity struct {
	ExtractionID uuid.UUID   `db:"extraction_id" json:"extraction_id"`
	EntityID     int32       `db:"entity_id" json:"entity_id"`
	Surface      string      `db:"surface" json:"surface"`
	Ordinal      pgtype.Int2 `db:"ordinal" json:"ordinal"`
}

type ContentExtractionPhrase struct {
	ID           int64              `db:"id" json:"id"`
	ExtractionID uuid.UUID          `db:"extraction_id" json:"extraction_id"`
	Phrase       string             `db:"phrase" json:"phrase"`
	Ordinal      int16              `db:"ordinal" json:"ordinal"`
	CreatedAt    pgtype.Timestamptz `db:"created_at" json:"created_at"`
}

type ContentExtractionTopic struct {
	ExtractionID uuid.UUID   `db:"extraction_id" json:"extraction_id"`
	TopicText    string      `db:"topic_text" json:"topic_text"`
	Ordinal      pgtype.Int2 `db:"ordinal" json:"ordinal"`
}

type Entity struct {
	ID        int32              `db:"id" json:"id"`
	Canonical string             `db:"canonical" json:"canonical"`
	Type      EntityType         `db:"type" json:"type"`
	CreatedAt pgtype.Timestamptz `db:"created_at" json:"created_at"`
}

// User-facing observation layer for POST /page_fetch. Groups one user submission. Parallel to batches; see docs/plan/spec.md §6.
type Fetch struct {
	ID uuid.UUID `db:"id" json:"id"`
	// Nullable in v1 (single-user dev). Filter target for multi-user RBAC.
	UserID    pgtype.UUID        `db:"user_id" json:"user_id"`
	CreatedAt pgtype.Timestamptz `db:"created_at" json:"created_at"`
	// Persisted in v1 but unused; v2 notification dispatcher will set on transition.
	CompletedAt pgtype.Timestamptz `db:"completed_at" json:"completed_at"`
}

// One row per (fetch, candidate). task_id may point at a shared active task created by another fetch — task fan-out is internal and never user-visible.
type FetchItem struct {
	FetchID     uuid.UUID   `db:"fetch_id" json:"fetch_id"`
	CandidateID uuid.UUID   `db:"candidate_id" json:"candidate_id"`
	TaskID      pgtype.UUID `db:"task_id" json:"task_id"`
	// NULL for live items (status comes from tasks.status). Set to ALREADY_COMPLETE when the candidate already had contents at submit time.
	SnapshotStatus pgtype.Text        `db:"snapshot_status" json:"snapshot_status"`
	CreatedAt      pgtype.Timestamptz `db:"created_at" json:"created_at"`
}

type Model struct {
	ID          int16              `db:"id" json:"id"`
	Name        string             `db:"name" json:"name"`
	Provider    string             `db:"provider" json:"provider"`
	Type        ModelType          `db:"type" json:"type"`
	PublishDate pgtype.Date        `db:"publish_date" json:"publish_date"`
	Url         pgtype.Text        `db:"url" json:"url"`
	Tag         pgtype.Text        `db:"tag" json:"tag"`
	CreatedAt   pgtype.Timestamptz `db:"created_at" json:"created_at"`
	DeletedAt   pgtype.Timestamptz `db:"deleted_at" json:"deleted_at"`
}

// Prompt asset registry. hash = SHA-256(body), used to pin extraction provenance.
type Prompt struct {
	ID        uuid.UUID          `db:"id" json:"id"`
	Name      string             `db:"name" json:"name"`
	Version   int32              `db:"version" json:"version"`
	Hash      string             `db:"hash" json:"hash"`
	SizeBytes int64              `db:"size_bytes" json:"size_bytes"`
	CreatedAt pgtype.Timestamptz `db:"created_at" json:"created_at"`
}

// Recurring schedule intent that materializes concrete task rows.
type Schedule struct {
	// Stable operator-provided UUIDv7 identity. Names and source_abbr are not durable identity.
	ID      uuid.UUID `db:"id" json:"id"`
	Name    string    `db:"name" json:"name"`
	Enabled bool      `db:"enabled" json:"enabled"`
	// False when a previously synced YAML schedule is absent from the latest config load; absent schedules do not fire.
	ConfigPresent bool            `db:"config_present" json:"config_present"`
	ConfigHash    string          `db:"config_hash" json:"config_hash"`
	Kind          TaskKind        `db:"kind" json:"kind"`
	SourceType    SourceType      `db:"source_type" json:"source_type"`
	SourceAbbr    string          `db:"source_abbr" json:"source_abbr"`
	Url           string          `db:"url" json:"url"`
	Payload       []byte          `db:"payload" json:"payload"`
	Meta          []byte          `db:"meta" json:"meta"`
	Frequency     pgtype.Interval `db:"frequency" json:"frequency"`
	RunOnInsert   bool            `db:"run_on_insert" json:"run_on_insert"`
	// Next time the schedule trigger should materialize a concrete task.
	NextFireAt         pgtype.Timestamptz `db:"next_fire_at" json:"next_fire_at"`
	LastFireAt         pgtype.Timestamptz `db:"last_fire_at" json:"last_fire_at"`
	LastMaterializedAt pgtype.Timestamptz `db:"last_materialized_at" json:"last_materialized_at"`
	// Latest task inserted or recovered by the schedule trigger.
	LastMaterializedTaskID pgtype.UUID        `db:"last_materialized_task_id" json:"last_materialized_task_id"`
	LastError              pgtype.Text        `db:"last_error" json:"last_error"`
	CreatedAt              pgtype.Timestamptz `db:"created_at" json:"created_at"`
	UpdatedAt              pgtype.Timestamptz `db:"updated_at" json:"updated_at"`
}

type SchemaMigration struct {
	Version int64 `db:"version" json:"version"`
	Dirty   bool  `db:"dirty" json:"dirty"`
}

type Source struct {
	Abbr      string             `db:"abbr" json:"abbr"`
	Name      string             `db:"name" json:"name"`
	Type      SourceType         `db:"type" json:"type"`
	BaseUrl   string             `db:"base_url" json:"base_url"`
	CreatedAt pgtype.Timestamptz `db:"created_at" json:"created_at"`
	DeletedAt pgtype.Timestamptz `db:"deleted_at" json:"deleted_at"`
}

// Runnable request-oriented work unit. Scheduler claims with FOR UPDATE SKIP LOCKED.
type Task struct {
	ID         uuid.UUID  `db:"id" json:"id"`
	BatchID    uuid.UUID  `db:"batch_id" json:"batch_id"`
	Kind       TaskKind   `db:"kind" json:"kind"`
	SourceType SourceType `db:"source_type" json:"source_type"`
	SourceAbbr string     `db:"source_abbr" json:"source_abbr"`
	Url        string     `db:"url" json:"url"`
	// Request details (e.g. {query, site} for KEYWORD_SEARCH). Search keywords belong here, not as columns.
	Payload []byte `db:"payload" json:"payload"`
	// SHA-256(canonical JSON payload), hex. KEYWORD_SEARCH dedup via uq_tasks_active_payload. PAGE_FETCH dedups on url instead.
	PayloadHash    pgtype.Text        `db:"payload_hash" json:"payload_hash"`
	Meta           []byte             `db:"meta" json:"meta"`
	TraceID        string             `db:"trace_id" json:"trace_id"`
	Frequency      pgtype.Interval    `db:"frequency" json:"frequency"`
	NextRunAt      pgtype.Timestamptz `db:"next_run_at" json:"next_run_at"`
	ExpiresAt      pgtype.Timestamptz `db:"expires_at" json:"expires_at"`
	Status         TaskStatus         `db:"status" json:"status"`
	RetryCount     int32              `db:"retry_count" json:"retry_count"`
	FailureMessage pgtype.Text        `db:"failure_message" json:"failure_message"`
	LastRunAt      pgtype.Timestamptz `db:"last_run_at" json:"last_run_at"`
	CreatedAt      pgtype.Timestamptz `db:"created_at" json:"created_at"`
	UpdatedAt      pgtype.Timestamptz `db:"updated_at" json:"updated_at"`
}

type Token struct {
	ID            uuid.UUID          `db:"id" json:"id"`
	Type          string             `db:"type" json:"type"`
	Name          string             `db:"name" json:"name"`
	Permissions   int16              `db:"permissions" json:"permissions"`
	HashAlgorithm string             `db:"hash_algorithm" json:"hash_algorithm"`
	TokenHash     string             `db:"token_hash" json:"token_hash"`
	CreatedAt     pgtype.Timestamptz `db:"created_at" json:"created_at"`
	ExpiresAt     pgtype.Timestamptz `db:"expires_at" json:"expires_at"`
	LastUsedAt    pgtype.Timestamptz `db:"last_used_at" json:"last_used_at"`
	RenewedAt     pgtype.Timestamptz `db:"renewed_at" json:"renewed_at"`
	RotatedAt     pgtype.Timestamptz `db:"rotated_at" json:"rotated_at"`
	RevokedAt     pgtype.Timestamptz `db:"revoked_at" json:"revoked_at"`
}
