Project prism {
  database_type: 'PostgreSQL'
  Note: 'Current task-driven discovery schema'
}

Enum source_type {
  PARTY
  MEDIA
}

Enum model_type {
  EXTRACTOR
  EMBEDDER
  ANALYZER
}

Enum content_type {
  PARTY_RELEASE
  ARTICLE
}

Enum embedding_category {
  TITLE
  BRIEF
}

Enum entity_type {
  person
  party
  government_agency
  legislative_body
  judicial_body
  military
  foreign_government
  organization
  media
  civic_group
  location
  other
}

Enum candidate_ingestion_method {
  DIRECTORY
  SEARCH
  SUBSCRIPTION
  MANUAL
}

Enum task_status {
  PENDING
  RUNNING
  FAILED
  COMPLETED
}

Enum task_kind {
  DIRECTORY_FETCH
  KEYWORD_SEARCH
  PAGE_FETCH
  EMBED_CANDIDATE
  EMBED_CONTENT
}

Table models {
  id smallserial [pk]
  name varchar(64) [not null, unique]
  provider varchar(32) [not null]
  type model_type [not null]
  publish_date date
  url text
  tag varchar(32)
  created_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz

  indexes {
    (type, name) [name: 'idx_models_type_name']
  }
}

Table sources {
  id serial [pk]
  abbr varchar(16) [not null, unique]
  name varchar(128) [not null]
  type source_type [not null]
  base_url text [not null]
  created_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz

  indexes {
    (abbr, base_url) [name: 'idx_sources_lookup']
    deleted_at [name: 'idx_sources_deleted_at']
  }
}

Table candidates {
  id uuid [pk, default: `uuidv7()`]
  batch_id uuid
  fingerprint char(32) [not null, unique]
  source_id int [not null, ref: > sources.id]
  title text [not null]
  url text [not null]
  description text
  published_at timestamptz
  discovered_at timestamptz [not null, default: `now()`]
  trace_id varchar(100) [not null]
  ingestion_method candidate_ingestion_method [not null]
  metadata jsonb
  created_at timestamptz [not null, default: `now()`]

  indexes {
    source_id [name: 'idx_candidates_source_id']
    batch_id [name: 'idx_candidates_batch_id']
    (source_id, published_at) [name: 'idx_candidates_source_published_at']
    discovered_at [name: 'idx_candidates_discovered_at']
    trace_id [name: 'idx_candidates_trace_id']
    url [name: 'idx_candidates_url']
  }
}

Table contents {
  id uuid [pk, default: `uuidv7()`]
  batch_id uuid
  type content_type [not null]
  source_id int [not null, ref: > sources.id]
  candidate_id uuid [unique, ref: > candidates.id]
  url text [not null, unique]
  title text [not null]
  content text [not null]
  author varchar(64)
  trace_id varchar(100) [not null]
  published_at timestamptz [not null]
  fetched_at timestamptz [not null]
  created_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz
  metadata jsonb

  indexes {
    type [name: 'idx_contents_type']
    batch_id [name: 'idx_contents_batch_id']
    source_id [name: 'idx_contents_source_id']
    candidate_id [name: 'idx_contents_candidate_id']
    trace_id [name: 'idx_contents_trace_id']
    published_at [name: 'idx_contents_published_at']
    deleted_at [name: 'idx_contents_deleted_at']
  }
}

Table prompts {
  id uuid [pk, default: `uuidv7()`]
  hash char(64) [not null, unique]
  path text [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    path [name: 'idx_prompts_path']
  }
}

Table content_extractions {
  id uuid [pk, default: `uuidv7()`]
  content_id uuid [not null, ref: > contents.id]
  model_id smallint [not null, ref: > models.id]
  prompt_id uuid [not null, ref: > prompts.id]
  schema_name text [not null, default: 'extraction_result']
  schema_version int [not null, default: 1]
  title text [not null]
  summary text [not null]
  raw_result jsonb [not null]
  trace_id varchar(100) [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    content_id [name: 'idx_content_extractions_content_id']
    model_id [name: 'idx_content_extractions_model_id']
    prompt_id [name: 'idx_content_extractions_prompt_id']
    trace_id [name: 'idx_content_extractions_trace_id']
    (content_id, created_at) [name: 'idx_content_extractions_content_created_at']
    (content_id, model_id, prompt_id, schema_version) [unique, name: 'uq_content_extractions_snapshot']
  }
}

Table entities {
  id serial [pk]
  canonical text [not null]
  type entity_type [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (canonical, type) [unique, name: 'uq_entities_canonical_type']
    type [name: 'idx_entities_type']
  }
}

Table content_extraction_entities {
  extraction_id uuid [not null, ref: > content_extractions.id]
  entity_id int [not null, ref: > entities.id]
  surface text [not null]
  ordinal smallint

  indexes {
    (extraction_id, entity_id) [pk]
    (extraction_id, ordinal) [name: 'idx_cee_extraction_ordinal']
  }
}

Table content_extraction_topics {
  extraction_id uuid [not null, ref: > content_extractions.id]
  topic_text text [not null]
  ordinal smallint

  indexes {
    (extraction_id, topic_text) [pk]
    (extraction_id, ordinal) [name: 'idx_cet_extraction_ordinal']
  }
}

Table content_extraction_phrases {
  id bigserial [pk]
  extraction_id uuid [not null, ref: > content_extractions.id]
  phrase text [not null]
  ordinal smallint [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (extraction_id, phrase) [unique, name: 'uq_content_extraction_phrases']
    (extraction_id, ordinal) [name: 'idx_content_extraction_phrases_ordinal']
  }
}

Table tasks {
  id uuid [pk, default: `uuidv7()`]
  batch_id uuid [not null]
  kind task_kind [not null]
  source_type source_type [not null]
  source_id int [not null, ref: > sources.id]
  url text [not null]
  payload jsonb [not null, default: `'{}'::jsonb`]
  trace_id varchar(100) [not null]
  frequency interval
  next_run_at timestamptz [not null, default: `now()`]
  expires_at timestamptz
  status task_status [not null, default: 'PENDING']
  retry_count int [not null, default: 0]
  last_run_at timestamptz
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    batch_id [name: 'idx_tasks_batch_id']
    status [name: 'idx_tasks_status']
    expires_at [name: 'idx_tasks_expiry']
    (next_run_at, frequency) [name: 'idx_tasks_schedule']
    trace_id [name: 'idx_tasks_trace_id']
    source_id [name: 'idx_tasks_source_id']
    (kind, source_type) [name: 'idx_tasks_kind_source_type']
    url [name: 'idx_tasks_url']
  }
}

Table candidate_embeddings_gemma_2025 {
  id bigserial [pk]
  candidate_id uuid [not null, ref: > candidates.id]
  model_id smallint [not null, ref: > models.id]
  category embedding_category [not null]
  vector vector(768) [not null]
  input_hash varchar(64) [not null]
  trace_id varchar(100) [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    candidate_id [name: 'idx_cemb_g25_candidate']
    model_id [name: 'idx_cemb_g25_model']
    category [name: 'idx_cemb_g25_category']
    trace_id [name: 'idx_cemb_g25_trace_id']
  }
}

Table content_embeddings_gemma_2025 {
  id bigserial [pk]
  content_id uuid [not null, ref: > contents.id]
  model_id smallint [not null, ref: > models.id]
  vector vector(768) [not null]
  input_hash varchar(64) [not null]
  trace_id varchar(100) [not null]
  created_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz

  indexes {
    content_id [name: 'idx_emb_g25_content']
    model_id [name: 'idx_emb_g25_model']
    trace_id [name: 'idx_emb_g25_trace_id']
  }
}
